# semigroup

./: .cargo-rdme.toml  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/actions/versions/: action.yml
.github/workflows/: master.yml  pullrequest.yml
coalesced_base/: Cargo.toml  build.rs
coalesced_base/src/: annotate.rs  coalesce.rs  coalesced.rs  extension.rs  generated.rs  iter.rs  lazy.rs  lib.rs  op.rs  reverse.rs  semigroup.rs  strategy.rs
coalesced_base/src/libs/: clap.rs  mod.rs  serde.rs
coalesced_base/src/op/: annotation.rs  mod.rs  reverse.rs
coalesced_base/src/op/annotation/: coalesce.rs  concat.rs  mod.rs  replace.rs
coalesced_base/src/op/semigroup/: add.rs
coalesced_base/src/strategy/: concat.rs  optional.rs  replace.rs
coalesced_core/: Cargo.toml
coalesced_core/src/: clap.rs  coalesce.rs  coalesced.rs  extension.rs  lib.rs  priority.rs  serde.rs
coalesced_derive/: Cargo.toml
coalesced_derive/src/: annotated.rs  annotation.rs  coalesce.rs  constant.rs  construction.rs  error.rs  extension.rs  generics.rs  lib.rs  semigroup.rs
coalesced_derive/src/construction/: ast.rs  attr.rs  gen.rs  generics.rs  implementor.rs  mod.rs
coalesced_derive/src/construction/ast/: construction_trait.rs  op_trait.rs
coalesced_derive/src/semigroup/: ast.rs  attr.rs  gen.rs  implementor.rs
coalesced_derive/src/semigroup/ast/: annotate.rs  field_semigroup.rs  struct_semigroup.rs
coalesced_derive/tests/: constraint_generics_named_fields_struct.rs  derive.rs  generics_named_fields_struct.rs  impl_proposal.rs  named_enum.rs  named_fields_struct.rs  named_fields_struct2.rs  named_fields_struct_constraint_generics.rs  named_fields_struct_constraint_generics2.rs  named_fields_struct_generics.rs  named_fields_struct_generics2.rs  named_fields_struct_inert_attributes.rs  named_unnamed_unit_enum.rs  named_unnamed_unit_enum2.rs  named_unnamed_unit_enum_inert_attributes.rs  unit_struct.rs  unit_struct2.rs  unnamed_fields_struct.rs  unnamed_fields_struct2.rs  unnamed_fields_struct_constraint_generics.rs  unnamed_fields_struct_constraint_generics2.rs  unnamed_fields_struct_generics.rs  unnamed_fields_struct_generics2.rs  unnamed_fields_struct_inert_attributes.rs
coalesced_derive/tests/snapshots/: coalesced_derive__construction__gen__tests__annotated.snap  coalesced_derive__construction__gen__tests__construction.snap  coalesced_derive__construction__gen__tests__custom_annotation.snap  coalesced_derive__construction__tests__annotated.snap  coalesced_derive__construction__tests__custom_annotation.snap  coalesced_derive__construction__tests__not_annotated.snap  construction_annotated.snap  construction_custom_annotation.snap  construction_not_annotated.snap  semigroup_annotated.snap  semigroup_custom_annotation.snap  semigroup_not_annotated.snap
coalesced_derive/tests/ui/compile_fail/: unsupported_union.rs
semigroup_base/: Cargo.toml
semigroup_base/src/: annotate.rs  iter.rs  lib.rs  monoid.rs  reverse.rs  segment_tree.rs  semigroup.rs
semigroup_base/src/op/: annotation.rs  semigroup.rs
semigroup_base/src/op/annotation/: coalesce.rs  concat.rs  overwrite.rs  replace.rs
semigroup_base/src/op/semigroup/: add.rs  gcd.rs  lcm.rs  max.rs  min.rs  prod.rs  sum.rs  xor.rs
semigroup_base/src/segment_tree/: index.rs  iter.rs
semigroup_derive/: Cargo.toml
semigroup_derive/src/: constant.rs  semigroup.rs
semigroup_derive/src/construction/: attr.rs
semigroup_derive/tests/snapshots/: construction_annotated.snap  construction_custom_annotation.snap  construction_not_annotated.snap  semigroup_annotated.snap  semigroup_custom_annotation.snap  semigroup_not_annotated.snap
src/: clap.rs  coalesce.rs  coalesced.rs  extension.rs  lib.rs  priority.rs  serde.rs
tests/: basic.rs  compile.rs  compile_fail.rs  custom_construction.rs  derive_annotated.rs  derive_semigroup.rs  option.rs
tests/ui/compile_fail/: only_same_type_extension.rs  only_same_type_extension.stderr  other_type_annotation.rs  other_type_annotation.stderr  other_type_extension.rs  other_type_extension.stderr  unimplemented_semigroup.rs  unimplemented_semigroup.stderr  unsupported_union.stderr
tests/ui/monoid/: other_type_annotation.stderr  unimplemented_semigroup.stderr
tests/ui/semigroup/: other_type_annotation.stderr  unimplemented_semigroup.stderr
