[workspace.package]
name = "coalesced"
version = "0.1.0"
description = "Coalesced supports reading configs from multiple sources"
authors = ["hayas1 <h4ystack@gmail.com>"]
edition = "2021"
repository = "https://github.com/hayas1/coalesced"
license-file = "LICENSE"
readme = "README.md"

[workspace]
members = ["coalesced_core", "coalesced_derive", "coalesced_base"]

[package]
name = "coalesced"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
readme.workspace = true

[features]
serde = ["coalesced_core/serde"]
clap = ["coalesced_core/clap"]

[dependencies]
coalesced_core = { path = "coalesced_core", default-features = false }
