[workspace.package]
version = "0.2.0"
description = "Useful semigroup trait"
authors = ["hayas1 <h4ystack@gmail.com>"]
edition = "2021"
repository = "https://github.com/hayas1/semigroup"
license-file = "LICENSE"
readme = "README.md"

[workspace]
members = ["semigroup_derive", "semigroup_base"]

[package]
name = "semigroup"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
readme.workspace = true

[features]
derive = ["semigroup_derive"]
test = ["semigroup_base/test"]
serde = ["semigroup_base/serde"]
clap = ["semigroup_base/clap"]

[dependencies]
semigroup_base = { path = "semigroup_base", default-features = false }
semigroup_derive = { path = "semigroup_derive", default-features = false, optional = true }

[dev-dependencies]
semigroup = { path = ".", features = ["derive", "test"] }
trybuild = { version = "1.0.111", features = ["diff"] }
