[package]
name = "coalesced_base"
version.workspace = true
description.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
readme.workspace = true

[features]
serde = ["dep:serde"]
clap = ["dep:clap"]
test = []

[dependencies]
clap = { version = "4.5.43", optional = true }
serde = { version = "1.0.219", features = ["derive"], optional = true }

[dev-dependencies]
clap = { version = "4.5.43", features = ["derive"] }
coalesced = { path = "../", features = ["derive"] }
serde_json = "1.0.142"
