[package]
name = "coalesced_base"
version.workspace = true
description.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
readme.workspace = true

[features]
serde = ["dep:serde"]
clap = ["dep:clap"]

[dependencies]
clap = { version = "4.5.47", optional = true }
serde = { version = "1.0.223", features = ["derive"], optional = true }

[dev-dependencies]
clap = { version = "4.5.47", features = ["derive"] }
coalesced = { path = "../", features = ["derive"] }
serde_json = "1.0.145"
