[package]
name = "coalesced_derive"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
readme.workspace = true

[lib]
proc-macro = true

[features]
use_scope = []

[dependencies]
darling = "0.21.2"
heck = "0.5.0"
proc-macro2 = "1.0.95"
quote = "1.0.39"
syn = { version = "2.0.104", features = ["full"] }

[dev-dependencies]
coalesced_derive = { path = ".", features = ["use_scope"] }
insta = "1.43.1"
prettyplease = "0.2.37"                                     # rustfmt is cli only
