[package]
name = "coalesced_derive"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
readme.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.101"
quote = "1.0.39"
syn = { version = "2.0.106", features = ["full"] }

[dev-dependencies]
coalesced = { path = "../", features = ["derive"] }
