[package]
name = "semigroup_base"
version.workspace = true
description.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
readme.workspace = true

[features]
serde = ["dep:serde"]
clap = ["dep:clap"]
test = []

[dependencies]
semigroup_derive = { path = "../semigroup_derive", features = ["use_scope"] }
clap = { version = "4.5.48", optional = true }
serde = { version = "1.0.228", features = ["derive"], optional = true }

[dev-dependencies]
clap = { version = "4.5.48", features = ["derive"] }
num = "0.4.3"
rand = "0.9.2"
rstest = "0.26.1"
serde_json = "1.0.145"
