[package]
name = "semigroup_derive"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
readme.workspace = true

[lib]
proc-macro = true

[features]
use_scope = []

[dependencies]
darling = "0.21.3"
heck = "0.5.0"
proc-macro2 = "1.0.101"
quote = "1.0.41"
syn = { version = "2.0.104", features = ["full"] }

[dev-dependencies]
semigroup_derive = { path = ".", features = ["use_scope"] }
insta = "1.43.2"
prettyplease = "0.2.37"                                     # rustfmt is cli only
rstest = "0.26.1"
